# ultralytics-for-vsensebox

./: .gitignore  README.md  create_whl.cmd  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yaml  test_build.yaml
ultralytics/: __init__.py
ultralytics/nn/: autobackend.py
ultralytics/trackers/utils/: matching.py
ultralytics/utils/: __init__.py  checks.py
