# Project-wide configuration file, can be used for package metadata and other toll configurations
# Example usage: global configuration for PEP8 (via flake8) setting or default pytest arguments
# Local usage: pip install pre-commit, pre-commit run --all-files

[metadata]
license_files = LICENSE
description_file = README.md

[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --doctest-modules
    --durations=30
    --color=yes

[coverage:run]
source = ultralytics/
data_file = tests/.coverage
omit =
    ultralytics/utils/callbacks/*

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore = E731,F405,E402,W504,E501
    # E731: Do not assign a lambda expression, use a def
    # F405: name may be undefined, or defined from star imports: module
    # E402: module level import not at top of file
    # W504: line break after binary operator
    # E501: line too long
    # removed:
    # F401: module imported but unused
    # E231: missing whitespace after ‘,’, ‘;’, or ‘:’
    # E127: continuation line over-indented for visual indent
    # F403: ‘from module import *’ used; unable to detect undefined names

[isort]
# https://pycqa.github.io/isort/docs/configuration/options.html
line_length = 120
# see: https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
multi_line_output = 0

[yapf]
based_on_style = pep8
spaces_before_comment = 2
column_limit = 120
coalesce_brackets = true
spaces_around_power_operator = true
space_between_ending_comma_and_closing_bracket = true
split_before_closing_bracket = false
split_before_first_argument = false

[docformatter]
wrap-summaries = 120
wrap-descriptions = 120
in-place = true
pre-summary-newline = true
close-quotes-on-newline = true

[codespell]
ignore-words-list = crate,nd,ned,strack,dota,ane,segway,fo,gool,winn,commend,bloc,nam,afterall
skip = *.pt,*.pth,*.torchscript,*.onnx,*.tflite,*.pb,*.bin,*.param,*.mlmodel,*.engine,*.npy,*.data*,*.csv,*pnnx*,*venv*,*translat*,__pycache__*,*.ico,*.jpg,*.png,*.mp4,*.mov,/runs,/.git,./docs/??/*.md,./docs/mkdocs_??.yml
